Bug 1050461 - Clean up webrtc upstream h264 mode 0 support and jitter buffer code, remove kludges. r=jesup, a=sledru

Changes the H.264 RTP receiver to handle multiple NAL units per frame with
the same timestamp.
A single jitter buffer frame is created for all packets with the same RTP
timestamp. NAL units are depacketized upon insertion to the encoded frame
buffer. Depacketization includes insertion of start codes and removal of
fragmentation and aggregation unit headers.